admin/src/pages/MailingList.css
.mailing-list-container {
  max-width: 1440px;
  margin: 0 auto;
  height: 100vh;
  padding: 144px 120px 80px 120px;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: stretch;
  gap: 24px;
}

.back-container {
  display: flex;
  flex-direction: row;
  gap: 10px;
  cursor: pointer;
}

.icon {
  width: 24px;
  height: 24px;
}

.back-text {
  color: var(--Primary, #153a7a);
  font-family: "Instrument Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px; /* 150% */
}

.mailing-list-header-container {
  display: flex;
  height: 45px;
  flex-direction: row;
  align-items: center;
  gap: 12px;
}

.mailing-list-header-text {
  color: var(--Primary, #153a7a);
  font-family: "League Spartan";
  font-size: 36px;
  font-style: normal;
  font-weight: 700;
  line-height: 104%; /* 37.44px */
}

.subscribers-container {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.subscribers-text {
  overflow: hidden;
  color: var(--Primary, #153a7a);
  text-overflow: ellipsis;

  /* Body/Medium (reg) */
  font-family: "Instrument Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 150%; /* 24px */
  letter-spacing: 0.32px;
}

.copy-emails-button {
  margin-left: auto;
}

